correction for https

--- a/Dockerfile/wiki.conf
+++ b/Dockerfile/wiki.conf
@@ -1,9 +1,13 @@
+# Set upload limit to 210MB to allow for larger file uploads
+# NOTE: this limit is also enforced by php's limits, see /etc/php.ini
+LimitRequestBody 220200960
+# has to set to NoDecode so that the URLs with "/"(slash) can be accepted and applied to RewriteRule
+AllowEncodedSlashes NoDecode
+
 <VirtualHost *:80>
     #ServerName example.com
     #ServerAlias www.example.com
-    #ServerAdmin webmaster@example.com
-    # Redirection 301  vers le site en HTTPS
-    Redirect permanent / https://${MEDIAWIKI_SITE_SERVER}/
+    ServerAdmin webmaster@dsna
 </VirtualHost>
 
 <VirtualHost *:443>
@@ -16,7 +20,7 @@
 	# However, you must set it for any further virtual host explicitly.
 	#ServerName www.example.com
     ServerAdmin webmaster@dsna
-    DocumentRoot /var/www/html
+    DocumentRoot /var/www/html/w
     #ServerName localhost
     RewriteEngine On
     SSLEngine on
@@ -37,10 +41,10 @@
     </Directory>
 
     # Redirect / to Main Page
-    RewriteRule ^/*$ %{DOCUMENT_ROOT}/w/index.php [L]
+    RewriteRule ^/*$ %{DOCUMENT_ROOT}/index.php [L]
     
     # Short URL for wiki pages
-    RewriteRule ^/?wiki(/.*)?$ %{DOCUMENT_ROOT}/w/index.php [L]
+    RewriteRule ^/?wiki(/.*)?$ %{DOCUMENT_ROOT}/index.php [L]
     
 	SSLCertificateFile /etc/apache2/ssl.crt
     SSLCertificateKeyFile /etc/apache2/ssl.key
