fix apache vhost

--- a/Dockerfile/wiki.conf
+++ b/Dockerfile/wiki.conf
@@ -20,7 +20,7 @@ AllowEncodedSlashes NoDecode
 	# However, you must set it for any further virtual host explicitly.
 	#ServerName www.example.com
     ServerAdmin webmaster@dsna
-    DocumentRoot /var/www/html/w
+    DocumentRoot /var/www/html
     #ServerName localhost
     RewriteEngine On
     SSLEngine on
@@ -41,10 +41,10 @@ AllowEncodedSlashes NoDecode
     </Directory>
 
     # Redirect / to Main Page
-    RewriteRule ^/*$ %{DOCUMENT_ROOT}/index.php [L]
+    RewriteRule ^/*$ %{DOCUMENT_ROOT}/w/index.php [L]
     
     # Short URL for wiki pages
-    RewriteRule ^/?wiki(/.*)?$ %{DOCUMENT_ROOT}/index.php [L]
+    RewriteRule ^/?wiki(/.*)?$ %{DOCUMENT_ROOT}/w/index.php [L]
     
 	SSLCertificateFile /etc/apache2/ssl.crt
     SSLCertificateKeyFile /etc/apache2/ssl.key
