--- a/Dockerfile/Dockerfile
+++ b/Dockerfile/Dockerfile
@@ -12,8 +12,10 @@ RUN apt-get update && apt-get install -y \
 		python3 \
         libpng-dev \
         unzip \
-        mysql-client \
+        mariadb-client \
 	--no-install-recommends && rm -r /var/lib/apt/lists/* && rm -rf /var/cache/apt/archives/*
+
+#RUN apt autoremove sensible-utils
 
 # Install the PHP extensions we need
 RUN docker-php-ext-install mbstring mysqli opcache intl gd zip
@@ -79,7 +81,7 @@ WORKDIR ${MEDIAWIKI_PATH}
 COPY ./composer.local.json ./composer.local.json
 
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
-php -r "if (hash_file('sha384', 'composer-setup.php') === '48e3236262b34d30969dca3c37281b3b4bbe3221bda826ac6a9a62d6444cdb0dcd0615698a5cbe587c3f0fe57a54d8f5') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" && \
+php -r "if (hash_file('sha384', 'composer-setup.php') === 'e0012edf3e80b6978849f5eff0d4b4e4c79ff1609dd1e613307e16318854d24ae64f26d17af3ef0bf7cfb710ca74755a') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" && \
 php composer-setup.php --install-dir=/usr/local/bin --filename=composer && \
 php -r "unlink('composer-setup.php');"
 RUN composer install --no-dev
