--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,7 +23,7 @@ jobs:
           # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
           password: ${{ secrets.DOCKER_PASSWORD }} # optional
           # Docker repository to tag the image with
-          repository: zodd31
+          repository: zodd31/wiki-dsna
           # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
           # tags: # optional
           # Automatically tags the built image with the git reference as per the readme
