--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -30,3 +30,4 @@ jobs:
           tag_with_ref: true # optional
           # Path to the build context
           path: ./Dockerfile # optional, default is .
+          dockerfile: ./Dockerfile/Dockerfile  
