--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
       - name: Build and push Docker images
         uses: docker/build-push-action@v1.0.1
         with:
@@ -29,5 +30,4 @@ jobs:
           # Automatically tags the built image with the git reference as per the readme
           tag_with_ref: true # optional
           # Path to the build context
-          path: ./Dockerfile # optional, default is .
-          dockerfile: ./Dockerfile/Dockerfile  
+          path: ${{ $GITHUB_WORKSPACE }}/Dockerfile # optional, default is .
