--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -30,4 +30,4 @@ jobs:
           # Automatically tags the built image with the git reference as per the readme
           tag_with_ref: true # optional
           # Path to the build context
-          path: ${{ GITHUB_WORKSPACE }}/Dockerfile # optional, default is .
+          path: ${{ github.workspace }}/Dockerfile # optional, default is .
