--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,16 +2,14 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ master ]
-    tags: 
-      - '*'
+    branches: [master]
+    tags:
+      - "*"
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
-
   docker:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -29,4 +27,4 @@ jobs:
           # Automatically tags the built image with the git reference as per the readme
           tag_with_ref: true # optional
           # Path to the build context
-          path: /Dockerfile/ # optional, default is .
+          path: ./Dockerfile/ # optional, default is .
