--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,12 +1,6 @@
 name: Docker Image CI
 
-on:
-  push:
-    branches: [master]
-    tags:
-      - "*"
-  pull_request:
-    branches: [master]
+
 
 jobs:
   docker:
@@ -28,3 +22,43 @@ jobs:
           tag_with_ref: true # optional
           # Path to the build context
           path: ./Dockerfile/ # optional, default is .
+
+
+
+name: ci
+
+on:
+  push:
+    branches: [master]
+    tags:
+      - "*"
+  pull_request:
+    branches: [master]
+
+jobs:
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: zodd31
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./Dockerfile
+          file: ./Dockerfile/Dockerfile
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
