--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,30 +1,3 @@
-name: Docker Image CI
-
-
-
-jobs:
-  docker:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v1.0.1
-        with:
-          # Username used to log in to a Docker registry. If not set then no login will occur
-          username: zodd31 # optional
-          # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
-          password: ${{ secrets.DOCKER_PASSWORD }} # optional
-          # Docker repository to tag the image with
-          repository: zodd31
-          # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
-          # tags: # optional
-          # Automatically tags the built image with the git reference as per the readme
-          tag_with_ref: true # optional
-          # Path to the build context
-          path: ./Dockerfile/ # optional, default is .
-
-
-
 name: ci
 
 on:
@@ -39,26 +12,43 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: zodd31
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: ./Dockerfile
           file: ./Dockerfile/Dockerfile
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
+# name: Docker Image CI
+
+# jobs:
+#   docker:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Build and push Docker images
+#         uses: docker/build-push-action@v1.0.1
+#         with:
+#           # Username used to log in to a Docker registry. If not set then no login will occur
+#           username: zodd31 # optional
+#           # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
+#           password: ${{ secrets.DOCKER_PASSWORD }} # optional
+#           # Docker repository to tag the image with
+#           repository: zodd31
+#           # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
+#           # tags: # optional
+#           # Automatically tags the built image with the git reference as per the readme
+#           tag_with_ref: true # optional
+#           # Path to the build context
+#           path: ./Dockerfile/ # optional, default is .
