--- a/Dockerfile/wiki.conf
+++ b/Dockerfile/wiki.conf
@@ -8,22 +8,9 @@ AllowEncodedSlashes NoDecode
     #ServerName example.com
     #ServerAlias www.example.com
     ServerAdmin webmaster@dsna
-</VirtualHost>
-
-<VirtualHost *:443>
-  	# The ServerName directive sets the request scheme, hostname and port that
-	# the server uses to identify itself. This is used when creating
-	# redirection URLs. In the context of virtual hosts, the ServerName
-	# specifies what hostname must appear in the request's Host: header to
-	# match this virtual host. For the default virtual host (this file) this
-	# value is not decisive as it is used as a last resort host regardless.
-	# However, you must set it for any further virtual host explicitly.
-	#ServerName www.example.com
-    ServerAdmin webmaster@dsna
     DocumentRoot /var/www/html
     #ServerName localhost
     RewriteEngine On
-    SSLEngine on
 
     <Directory /var/www/html/w>
          # Ignore .htaccess files
@@ -45,11 +32,7 @@ AllowEncodedSlashes NoDecode
     
     # Short URL for wiki pages
     RewriteRule ^/?wiki(/.*)?$ %{DOCUMENT_ROOT}/w/index.php [L]
-    
-	SSLCertificateFile /etc/apache2/ssl.crt
-    SSLCertificateKeyFile /etc/apache2/ssl.key
-    SSLCertificateChainFile /etc/apache2/ssl.bundle.crt
-    
+
     # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
     # error, crit, alert, emerg.
     # It is also possible to configure the loglevel for particular
@@ -93,7 +76,7 @@ AllowEncodedSlashes NoDecode
     </Directory>
     
     #Header always set Strict-Transport-Security "max-age=15768000"
+
 </VirtualHost>
 
-
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+# vim: syntax=apache ts=4 sw=4 sts=4 sr noetroot@9c177ea5a0dc:/etc/apache2/sites-available
